--- a/SpringFirst/pom.xml
+++ b/SpringFirst/pom.xml
@@ -59,9 +59,17 @@
       <version>5.0.0</version>
       <scope>provided</scope>
     </dependency>
-
-
-
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>5.1.3.RELEASE</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.23</version>
+    </dependency>
 
 
 
